Update Robolectric test runtime